k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskwise-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskwise
  template:
    metadata:
      labels:
        app: taskwise
    spec:
      containers:
      - name: taskwise
        image: asia-south1-docker.pkg.dev/certain-beach-457504-r9/poc/taskwise:latest
        ports:
        - containerPort: 80
