k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskwise-service
spec:
  selector:
    app: taskwise
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
